# diamondfp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: batting_2015-2015.csv  batting_2015-2025.csv  career-batting.csv  pitching_2015-2025.csv
examples/: basic_example.py  examples.md  fp_tanimoto_analysis.ipynb  molecule_match.ipynb  normalizedfp_example.py  visualizing_fp.ipynb
examples/basics/: binaryfp_example.py  pybaseball_example.ipynb
examples/modeling/: cy_young_fp_search.ipynb  molecule_match.ipynb  mvp_fp_search.ipynb
src/diamondfp/: __init__.py  binary_fp.py  fingerprints.py  scoring.py
src/diamondfp/utils/: __init__.py  features.py
tests/: features_test.py  fingerprints_test.py  scoring_test.py
