[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diamondfp"
version = "0.1.0"
description = "Statistical fingerprints for baseball players — find their closest matches."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dlf57/diamondfp"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "codecov>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]